Added Models and new Routes to categories
